// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Request Template Form Components Check snapshot 1`] = `
<div>
  <form
    style="width: 100%; margin-bottom: 20px;"
  >
    <div
      class="chakra-stack css-z8oacn"
    >
      <div
        class="chakra-form-control css-dynqen"
        role="group"
      >
        <label
          class="chakra-form__label css-8sede8"
          for="field-:r14:"
          id="field-:r14:-label"
        >
          Current Office
          <span
            class="chakra-form__helper-text css-1jd2nkm"
            id="field-:r14:-helptext"
            style="color: red;"
          >
             
            *
          </span>
        </label>
        <div
          class=" css-b62m3t-container"
        >
          <span
            class="css-1f43avz-a11yText-A11yText"
            id="react-select-14-live-region"
          />
          <span
            aria-atomic="false"
            aria-live="polite"
            aria-relevant="additions text"
            class="css-1f43avz-a11yText-A11yText"
          />
          <div
            class=" css-13cymwt-control"
          >
            <div
              class=" css-1fdsijx-ValueContainer"
            >
              <div
                class=" css-1dimb5e-singleValue"
              >
                Đà Nẵng
              </div>
              <div
                class=" css-qbdosj-Input"
                data-value=""
              >
                <input
                  aria-autocomplete="list"
                  aria-expanded="false"
                  aria-haspopup="true"
                  autocapitalize="none"
                  autocomplete="off"
                  autocorrect="off"
                  class=""
                  id="react-select-14-input"
                  role="combobox"
                  spellcheck="false"
                  style="opacity: 1; width: 100%; grid-area: 1 / 2; min-width: 2px; border: 0px; margin: 0px; outline: 0; padding: 0px;"
                  tabindex="0"
                  type="text"
                  value=""
                />
              </div>
            </div>
            <div
              class=" css-1hb7zxy-IndicatorsContainer"
            >
              <span
                class=" css-1u9des2-indicatorSeparator"
              />
              <div
                aria-hidden="true"
                class=" css-1xc3v61-indicatorContainer"
              >
                <svg
                  aria-hidden="true"
                  class="css-tj5bde-Svg"
                  focusable="false"
                  height="20"
                  viewBox="0 0 20 20"
                  width="20"
                >
                  <path
                    d="M4.516 7.548c0.436-0.446 1.043-0.481 1.576 0l3.908 3.747 3.908-3.747c0.533-0.481 1.141-0.446 1.574 0 0.436 0.445 0.408 1.197 0 1.615-0.406 0.418-4.695 4.502-4.695 4.502-0.217 0.223-0.502 0.335-0.787 0.335s-0.57-0.112-0.789-0.335c0 0-4.287-4.084-4.695-4.502s-0.436-1.17 0-1.615z"
                  />
                </svg>
              </div>
            </div>
          </div>
          <input
            name="CurrentOffice"
            type="hidden"
            value="ĐN"
          />
        </div>
      </div>
      <div
        class="chakra-form-control css-dynqen"
        role="group"
      >
        <label
          class="chakra-form__label css-8sede8"
          for="field-:r15:"
          id="field-:r15:-label"
        >
          Destination Office
          <span
            class="chakra-form__helper-text css-1jd2nkm"
            id="field-:r15:-helptext"
            style="color: red;"
          >
             
            *
          </span>
        </label>
        <div
          class=" css-b62m3t-container"
        >
          <span
            class="css-1f43avz-a11yText-A11yText"
            id="react-select-15-live-region"
          />
          <span
            aria-atomic="false"
            aria-live="polite"
            aria-relevant="additions text"
            class="css-1f43avz-a11yText-A11yText"
          />
          <div
            class=" css-13cymwt-control"
          >
            <div
              class=" css-1fdsijx-ValueContainer"
            >
              <div
                class=" css-1dimb5e-singleValue"
              >
                Đà Nẵng
              </div>
              <div
                class=" css-qbdosj-Input"
                data-value=""
              >
                <input
                  aria-autocomplete="list"
                  aria-expanded="false"
                  aria-haspopup="true"
                  autocapitalize="none"
                  autocomplete="off"
                  autocorrect="off"
                  class=""
                  id="react-select-15-input"
                  role="combobox"
                  spellcheck="false"
                  style="opacity: 1; width: 100%; grid-area: 1 / 2; min-width: 2px; border: 0px; margin: 0px; outline: 0; padding: 0px;"
                  tabindex="0"
                  type="text"
                  value=""
                />
              </div>
            </div>
            <div
              class=" css-1hb7zxy-IndicatorsContainer"
            >
              <span
                class=" css-1u9des2-indicatorSeparator"
              />
              <div
                aria-hidden="true"
                class=" css-1xc3v61-indicatorContainer"
              >
                <svg
                  aria-hidden="true"
                  class="css-tj5bde-Svg"
                  focusable="false"
                  height="20"
                  viewBox="0 0 20 20"
                  width="20"
                >
                  <path
                    d="M4.516 7.548c0.436-0.446 1.043-0.481 1.576 0l3.908 3.747 3.908-3.747c0.533-0.481 1.141-0.446 1.574 0 0.436 0.445 0.408 1.197 0 1.615-0.406 0.418-4.695 4.502-4.695 4.502-0.217 0.223-0.502 0.335-0.787 0.335s-0.57-0.112-0.789-0.335c0 0-4.287-4.084-4.695-4.502s-0.436-1.17 0-1.615z"
                  />
                </svg>
              </div>
            </div>
          </div>
          <input
            name="DestinationOffice"
            type="hidden"
            value="ĐN"
          />
        </div>
      </div>
      <div
        class="chakra-form-control css-0"
        role="group"
      >
        <label
          class="chakra-form__label css-c5n4e2"
          for="field-:r16:"
          id="field-:r16:-label"
        >
          Content
          <span
            class="chakra-form__helper-text css-1jd2nkm"
            id="field-:r16:-helptext"
            style="color: red;"
          >
             
            *
          </span>
        </label>
        <div
          class="chakra-form-control css-0"
          role="group"
        >
          <textarea
            class="chakra-textarea css-0"
            data-testid="Content"
            id="field-:r17:"
            name="Content"
            placeholder="Content"
          />
        </div>
      </div>
      <div
        class="chakra-form-control css-0"
        role="group"
      >
        <label
          class="chakra-form__label css-c5n4e2"
          data-testid="StartDate"
          for="StartDate"
          id="field-:r18:-label"
        >
          Start Date
          <span
            class="chakra-form__helper-text css-1jd2nkm"
            id="field-:r18:-helptext"
            style="color: red;"
          >
             
            *
          </span>
        </label>
        <div
          class="react-datepicker-wrapper"
        >
          <div
            class="react-datepicker__input-container"
          >
            <input
              class=""
              id="StartDate"
              type="text"
              value=""
            />
          </div>
        </div>
      </div>
      <div
        class="chakra-form-control css-0"
        role="group"
      >
        <label
          class="chakra-form__label css-c5n4e2"
          data-testid="EndDate"
          for="EndDate"
          id="field-:r19:-label"
        >
          End Date
        </label>
        <div
          class="react-datepicker-wrapper"
        >
          <div
            class="react-datepicker__input-container"
          >
            <input
              class=""
              id="EndDate"
              type="text"
              value=""
            />
          </div>
        </div>
      </div>
      <button
        class="chakra-button css-1jntfhr"
        data-testid="submit"
        type="submit"
      >
        Save
      </button>
    </div>
  </form>
</div>
`;

exports[`Request Template Form Components Request Template Form 1`] = `
<div>
  <form
    style="width: 100%; margin-bottom: 20px;"
  >
    <div
      class="chakra-stack css-z8oacn"
    >
      <div
        class="chakra-form-control css-dynqen"
        role="group"
      >
        <label
          class="chakra-form__label css-8sede8"
          for="field-:ru:"
          id="field-:ru:-label"
        >
          Current Office
          <span
            class="chakra-form__helper-text css-1jd2nkm"
            id="field-:ru:-helptext"
            style="color: red;"
          >
             
            *
          </span>
        </label>
        <div
          class=" css-b62m3t-container"
        >
          <span
            class="css-1f43avz-a11yText-A11yText"
            id="react-select-12-live-region"
          />
          <span
            aria-atomic="false"
            aria-live="polite"
            aria-relevant="additions text"
            class="css-1f43avz-a11yText-A11yText"
          />
          <div
            class=" css-13cymwt-control"
          >
            <div
              class=" css-1fdsijx-ValueContainer"
            >
              <div
                class=" css-1dimb5e-singleValue"
              >
                Đà Nẵng
              </div>
              <div
                class=" css-qbdosj-Input"
                data-value=""
              >
                <input
                  aria-autocomplete="list"
                  aria-expanded="false"
                  aria-haspopup="true"
                  autocapitalize="none"
                  autocomplete="off"
                  autocorrect="off"
                  class=""
                  id="react-select-12-input"
                  role="combobox"
                  spellcheck="false"
                  style="opacity: 1; width: 100%; grid-area: 1 / 2; min-width: 2px; border: 0px; margin: 0px; outline: 0; padding: 0px;"
                  tabindex="0"
                  type="text"
                  value=""
                />
              </div>
            </div>
            <div
              class=" css-1hb7zxy-IndicatorsContainer"
            >
              <span
                class=" css-1u9des2-indicatorSeparator"
              />
              <div
                aria-hidden="true"
                class=" css-1xc3v61-indicatorContainer"
              >
                <svg
                  aria-hidden="true"
                  class="css-tj5bde-Svg"
                  focusable="false"
                  height="20"
                  viewBox="0 0 20 20"
                  width="20"
                >
                  <path
                    d="M4.516 7.548c0.436-0.446 1.043-0.481 1.576 0l3.908 3.747 3.908-3.747c0.533-0.481 1.141-0.446 1.574 0 0.436 0.445 0.408 1.197 0 1.615-0.406 0.418-4.695 4.502-4.695 4.502-0.217 0.223-0.502 0.335-0.787 0.335s-0.57-0.112-0.789-0.335c0 0-4.287-4.084-4.695-4.502s-0.436-1.17 0-1.615z"
                  />
                </svg>
              </div>
            </div>
          </div>
          <input
            name="CurrentOffice"
            type="hidden"
            value="ĐN"
          />
        </div>
      </div>
      <div
        class="chakra-form-control css-dynqen"
        role="group"
      >
        <label
          class="chakra-form__label css-8sede8"
          for="field-:rv:"
          id="field-:rv:-label"
        >
          Destination Office
          <span
            class="chakra-form__helper-text css-1jd2nkm"
            id="field-:rv:-helptext"
            style="color: red;"
          >
             
            *
          </span>
        </label>
        <div
          class=" css-b62m3t-container"
        >
          <span
            class="css-1f43avz-a11yText-A11yText"
            id="react-select-13-live-region"
          />
          <span
            aria-atomic="false"
            aria-live="polite"
            aria-relevant="additions text"
            class="css-1f43avz-a11yText-A11yText"
          />
          <div
            class=" css-13cymwt-control"
          >
            <div
              class=" css-1fdsijx-ValueContainer"
            >
              <div
                class=" css-1dimb5e-singleValue"
              >
                Đà Nẵng
              </div>
              <div
                class=" css-qbdosj-Input"
                data-value=""
              >
                <input
                  aria-autocomplete="list"
                  aria-expanded="false"
                  aria-haspopup="true"
                  autocapitalize="none"
                  autocomplete="off"
                  autocorrect="off"
                  class=""
                  id="react-select-13-input"
                  role="combobox"
                  spellcheck="false"
                  style="opacity: 1; width: 100%; grid-area: 1 / 2; min-width: 2px; border: 0px; margin: 0px; outline: 0; padding: 0px;"
                  tabindex="0"
                  type="text"
                  value=""
                />
              </div>
            </div>
            <div
              class=" css-1hb7zxy-IndicatorsContainer"
            >
              <span
                class=" css-1u9des2-indicatorSeparator"
              />
              <div
                aria-hidden="true"
                class=" css-1xc3v61-indicatorContainer"
              >
                <svg
                  aria-hidden="true"
                  class="css-tj5bde-Svg"
                  focusable="false"
                  height="20"
                  viewBox="0 0 20 20"
                  width="20"
                >
                  <path
                    d="M4.516 7.548c0.436-0.446 1.043-0.481 1.576 0l3.908 3.747 3.908-3.747c0.533-0.481 1.141-0.446 1.574 0 0.436 0.445 0.408 1.197 0 1.615-0.406 0.418-4.695 4.502-4.695 4.502-0.217 0.223-0.502 0.335-0.787 0.335s-0.57-0.112-0.789-0.335c0 0-4.287-4.084-4.695-4.502s-0.436-1.17 0-1.615z"
                  />
                </svg>
              </div>
            </div>
          </div>
          <input
            name="DestinationOffice"
            type="hidden"
            value="ĐN"
          />
        </div>
      </div>
      <div
        class="chakra-form-control css-0"
        role="group"
      >
        <label
          class="chakra-form__label css-c5n4e2"
          for="field-:r10:"
          id="field-:r10:-label"
        >
          Content
          <span
            class="chakra-form__helper-text css-1jd2nkm"
            id="field-:r10:-helptext"
            style="color: red;"
          >
             
            *
          </span>
        </label>
        <div
          class="chakra-form-control css-0"
          role="group"
        >
          <textarea
            class="chakra-textarea css-0"
            data-testid="Content"
            id="field-:r11:"
            name="Content"
            placeholder="Content"
          />
        </div>
      </div>
      <div
        class="chakra-form-control css-0"
        role="group"
      >
        <label
          class="chakra-form__label css-c5n4e2"
          data-testid="StartDate"
          for="StartDate"
          id="field-:r12:-label"
        >
          Start Date
          <span
            class="chakra-form__helper-text css-1jd2nkm"
            id="field-:r12:-helptext"
            style="color: red;"
          >
             
            *
          </span>
        </label>
        <div
          class="react-datepicker-wrapper"
        >
          <div
            class="react-datepicker__input-container"
          >
            <input
              class=""
              id="StartDate"
              type="text"
              value=""
            />
          </div>
        </div>
      </div>
      <div
        class="chakra-form-control css-0"
        role="group"
      >
        <label
          class="chakra-form__label css-c5n4e2"
          data-testid="EndDate"
          for="EndDate"
          id="field-:r13:-label"
        >
          End Date
        </label>
        <div
          class="react-datepicker-wrapper"
        >
          <div
            class="react-datepicker__input-container"
          >
            <input
              class=""
              id="EndDate"
              type="text"
              value=""
            />
          </div>
        </div>
      </div>
      <button
        class="chakra-button css-1jntfhr"
        data-testid="submit"
        type="submit"
      >
        Save
      </button>
    </div>
  </form>
</div>
`;
